tests/integration/snapshots/integration__parse_failure__object_missing_colon.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"hi"    
stderr ---
error: expected colon after key, found no significant characters
 --> stdin:1:5
  |
1 | {"hi"    
  |  ---^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 | {"hi": "garlic bread" }    
  |      ++++++++++++++++++
